[gd_scene load_steps=6 format=3 uid="uid://bud836iugnnjy"]

[ext_resource type="Script" uid="uid://clnqwgpek2ppd" path="res://gui/menu_main.gd" id="1_l2prv"]
[ext_resource type="Theme" uid="uid://d17mk31idftvd" path="res://gui/theme_primary.tres" id="2_l2prv"]
[ext_resource type="AudioStream" uid="uid://yw0cxkd1qonf" path="res://audio/tick_001.ogg" id="3_henhl"]
[ext_resource type="AudioStream" uid="uid://defham2cwl4ty" path="res://audio/select_001.ogg" id="4_gtd7g"]

[sub_resource type="LabelSettings" id="LabelSettings_l2prv"]
font_size = 64

[node name="MenuMain" type="CanvasLayer"]
script = ExtResource("1_l2prv")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_l2prv")

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.49019608, 1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -190.0
offset_top = -105.0
offset_right = 190.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2

[node name="LabelTitle" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "MAIN MENU"
label_settings = SubResource("LabelSettings_l2prv")
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="LineEditDisplayName" type="LineEdit" parent="Control/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Write your name here"
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonHost" type="Button" parent="Control/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Host"

[node name="ButtonJoin" type="Button" parent="Control/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Join"

[node name="ButtonSettings" type="Button" parent="Control/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Settings"

[node name="ButtonQuit" type="Button" parent="Control/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Quit"

[node name="AudioHover" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_henhl")

[node name="AudioPress" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_gtd7g")
